<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>QCommConfigUdpServer</class>
 <widget class="QDialog" name="QCommConfigUdpServer">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>322</width>
    <height>206</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="2" column="0">
      <widget class="QLabel" name="label_5">
       <property name="text">
        <string>组播IP地址</string>
       </property>
      </widget>
     </item>
     <item row="2" column="1">
      <widget class="QLineEdit" name="m_editMulticastIP"/>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_4">
       <property name="text">
        <string>本机端口号</string>
       </property>
      </widget>
     </item>
     <item row="0" column="0">
      <widget class="QLabel" name="label_6">
       <property name="text">
        <string>本机IP地址</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QLineEdit" name="m_editLocalIP"/>
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="m_editLocalPort"/>
     </item>
     <item row="3" column="1">
      <widget class="QCheckBox" name="isBroadcast">
       <property name="text">
        <string>是否使用广播</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
